--- a/charts/docker-registry-browser/templates/deployment.yaml
+++ b/charts/docker-registry-browser/templates/deployment.yaml
@@ -5,9 +5,7 @@ metadata:
   labels:
     {{- include "docker-registry-browser.labels" . | nindent 4 }}
 spec:
-  {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
-  {{- end }}
   selector:
     matchLabels:
       {{- include "docker-registry-browser.selectorLabels" . | nindent 6 }}
@@ -35,16 +33,21 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8080
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /ping
               port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
+          env:
+            {{- range $key, $value := .Values.env }}
+            - name: {{ $key }}
+              value: {{ $value | quote }}
+            {{- end }}
+          {{- with .Values.envFrom }}
+          envFrom:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
