--- a/charts/docker-registry-browser/templates/deployment.yaml
+++ b/charts/docker-registry-browser/templates/deployment.yaml
@@ -50,6 +50,10 @@ spec:
           {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          {{- if .Values.volumeMounts }}
+          volumeMounts:
+              {{- toYaml .Values.volumeMounts | nindent 12}}
+          {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -61,4 +65,8 @@ spec:
       {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if .Values.volumes }}
+      volumes:
+         {{- toYaml .Values.volumes | nindent 8}}
       {{- end }}
