--- a/charts/tailscale-subnet-router/Chart.yaml
+++ b/charts/tailscale-subnet-router/Chart.yaml
@@ -2,8 +2,12 @@ apiVersion: v2
 name: tailscale-subnet-router
 description: Deploy a Tailscale subnet router on Kubernetes
 type: application
-version: 0.1.0
+version: 1.0.0
 appVersion: "v1.20"
 home: https://github.com/gtaylor/helm-charts/charts/tailscale-subnet-router
 sources:
   - https://github.com/gtaylor/helm-charts/charts/tailscale-subnet-router
+maintainers:
+  - email: greg@gctaylor.com
+    name: Greg Taylor
+    url: https://gc-taylor.com
