--- a/charts/tailscale-subnet-router/values.yaml
+++ b/charts/tailscale-subnet-router/values.yaml
@@ -1,24 +1,36 @@
+# -- Do not change! Only `1` is currently supported.
 replicas: 1
 
 image:
-  repository: docker.aegn.dev:5443/tailscale/tailscale-subnet-proxy
+  # -- **Build your own image and override this!**
+  repository:
   pullPolicy: Always
   tag: latest
 
+# -- List the secrets containing the Docker creds for images in this Chart
 imagePullSecrets: []
+# -- Optional override for app name
 nameOverride: ""
+# -- Optional override for app fullname
 fullnameOverride: ""
 
 tailscale:
   auth:
+    # -- The name of the secret containing a Tailscale auth key
     secretName: tailscale-subnet-router-secrets
+    # -- The key within the above Secret that contains a Tailscale auth key
     secretKey: AUTH_KEY
   state:
+    # -- The secret that the subnet router will store its state in
     secretName: tailscale-subnet-router-state
+  # -- Routes for the subnet router to publish
   routes:
-    serviceCIDR: "10.96.0.0/12"
-    podCIDR: "10.244.0.0/16"
+    # Default service CIDR
+    - "10.96.0.0/12"
+    # Default pod CIDR
+    - "10.244.0.0/16"
 
+# -- The service account to create or attach
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
@@ -28,8 +40,10 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
+# -- Additional volumes to add to the pod
 volumes: []
 
+# -- Additional volumes to add to mount to the primary container
 volumeMounts: []
 
 # -- Additional annotations for the pods
@@ -39,7 +53,9 @@ podSecurityContext: {}
   # fsGroup: 2000
 
 securityContext:
+  # -- The UID of the user to run the router as
   runAsUser: 1000
+  # -- The GID of the user to run the router as
   runAsGroup: 1000
   # capabilities:
   #   drop:
@@ -47,8 +63,7 @@ securityContext:
   # readOnlyRootFilesystem: true
   # runAsNonRoot: true
 
-## Resources to allocate to the pods
-##
+# -- Resources to allocate to the pods
 resources: {}
 #  limits:
 #    cpu: 50m
@@ -57,17 +72,13 @@ resources: {}
 #    cpu: 50m
 #    memory: 64Mi
 
-## Node labels for pod assignment
-## ref: https://kubernetes.io/docs/user-guide/node-selection/
-#
+# -- Node labels for [pod assignment](https://kubernetes.io/docs/user-guide/node-selection/)
 nodeSelector: {}
 
-## Tolerations for pod assignment
-## ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
-##
+# -- [Tolerations](https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/)
+# for pod assignment
 tolerations: []
 
-## Affinity for pod assignment
-## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
-##
+# -- [Affinity](https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity)
+# for pod assignment
 affinity: {}
