Support including additional environment variables
Allow for meaningful names in the container name

This is shown in the Tailscale UI and should be able to be unique across
environments

--- a/charts/tailscale-subnet-router/templates/statefulset.yaml
+++ b/charts/tailscale-subnet-router/templates/statefulset.yaml
@@ -29,7 +29,7 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
-        - name: {{ .Chart.Name }}
+        - name: {{ include "tailscale-subnet-router.fullname" . }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
@@ -46,6 +46,9 @@ spec:
                   key: {{ .Values.tailscale.auth.secretKey }}
             - name: TS_ROUTES
               value: {{ join "," .Values.tailscale.routes|quote }}
+          {{- if .Values.tailscale.extraEnv }}
+          {{- tpl (.Values.tailscale.extraEnv | toYaml) . | nindent 12 }}
+          {{- end }}
           {{- with .Values.resources }}
           resources: {{ toYaml . | nindent 16 }}
           {{- end }}
