Fix up permissions for the latest version
See https://github.com/tailscale/tailscale/commit/5e703bdb55f804805e1f58460926e6521c797327

--- a/charts/tailscale-subnet-router/templates/role.yaml
+++ b/charts/tailscale-subnet-router/templates/role.yaml
@@ -12,4 +12,4 @@ rules:
   - apiGroups: [""]
     resourceNames: [ {{ .Values.tailscale.state.secretName }} ]
     resources: ["secrets"]
-    verbs: ["get", "update"]
+    verbs: ["get", "update", "patch"]
