Use `tailscale-subnet-router.name` for container name

--- a/charts/tailscale-subnet-router/templates/statefulset.yaml
+++ b/charts/tailscale-subnet-router/templates/statefulset.yaml
@@ -29,7 +29,7 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
-        - name: {{ include "tailscale-subnet-router.fullname" . }}
+        - name: {{ include "tailscale-subnet-router.name" . }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
