--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -7,34 +7,34 @@ on: push
 #     branches: [ "main" ]
 
 jobs:
-  acls:
+  test-deploy:
     runs-on: ubuntu-latest
-    # permissions:
-    #   id-token: write
-    #   contents: read
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - uses: azure/setup-helm@v3
+      - name: Setup helm tool
+        uses: azure/setup-helm@v3
 
       - name: Run Helm lint against chart
         run: helm lint charts/tailscale-subnet-router
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1-node16
+        with:
+          role-to-assume: arn:aws:iam::883152518512:role/tailscale-subnet-router-GithubActions
+          aws-region: eu-west-3
 
-
-      # - name: Configure AWS Credentials
-      #   uses: aws-actions/configure-aws-credentials@v1-node16
-      #   with:
-      #     role-to-assume: arn:aws:iam::883152518512:role/GithubActionsRole
-      #     aws-region: eu-west-3
-
-      # - name: Get secrets by name and by ARN
-      #   uses: aws-actions/aws-secretsmanager-get-secrets@v1
-      #   with:
-      #     secret-ids: |
-      #       arn:aws:secretsmanager:eu-west-3:883152518512:secret:coverflex_github_actions-jQGy82
-      #     parse-json-secrets: true
+      - name: Get secrets by name and by ARN
+        uses: aws-actions/aws-secretsmanager-get-secrets@v1
+        with:
+          secret-ids: |
+            arn:aws:secretsmanager:eu-west-3:883152518512:secret:coverflex_tailscale_githubactions-9VIndJ
+          parse-json-secrets: true
 
       # - name: Get tailscale API key
       #   run: |
