--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -33,8 +33,8 @@ jobs:
         if: github.event_name == 'push'
         uses: aws-actions/configure-aws-credentials@v1-node16
         with:
-          role-to-assume: "${AWS_ASSUME_ROLE}"
-          aws-region: "${AWS_REGION}"
+          role-to-assume: ${AWS_ASSUME_ROLE}
+          aws-region: ${AWS_REGION}
 
       - name: deploy tailscale
         if: github.event_name == 'push'
